--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "axios": "^0.27.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
+    "excel4node": "^1.8.0",
     "express": "^4.18.1",
+    "json-as-xlsx": "^2.4.2",
     "nodemon": "^2.0.19",
-    "nosql": "^6.1.0"
+    "nosql": "^6.1.0",
+    "save": "^2.5.0"
   }
 }
